testsuite/tests/prep/errors/invalid.adb
pragma Foo;
#end if;
pragma Bar;
